# ToinComputerAssistant

./: .gitignore  Cargo.toml  LICENSE  PATCH.md  README.md  THIRD_PARTY_LICENSES.md
.cargo/: config.toml
.github/workflows/: release-main.yaml
docs/: UPSTREAM_MERGE.md
src/: README.md  channel.rs  commands.rs  config.rs  context.rs  events.rs  lib.rs  lmclient.rs  main.rs  user.rs
src/app/: config.rs  context.rs
src/discord/: commands.rs  events.rs
src/fork_ext/: config.rs  mod.rs  text_pipeline.rs  tts_preprocessor.rs
src/llm/: channel.rs  client.rs  mod.rs  router.rs  user.rs
src/llm/gemini/: client.rs  mapper.rs  mod.rs  schema.rs  types.rs
src/llm/nim/: client.rs
src/llm/tools/: discord.rs  get_time.rs  latex.rs  modal_builder.rs  voicevox.rs
src/tools/: discord.rs  get_time.rs  latex.rs  mod.rs  modal_builder.rs  voicevox.rs
src/voice/: core_runtime.rs  mod.rs  system.rs  text.rs  types.rs  voice_catalog.rs
