[package]
name = "nelfie"
version = "0.1.7"
edition = "2024"

[dependencies]
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.89"
async-openai = { version = "0.34", features = ["responses"] }
serenity = { version = "0.12", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend", # native-tls じゃなく rustls を使う
    "model",
] }

# コマンドフレームワーク
poise = "0.6"
log = "0.4.28"
serde_json = "1.0"
serde = "1.0.228"
dashmap = "6.1.0"
dotenv = "0.15.0"
chrono = "0.4.44"
chrono-tz = "0.10.4"
anyhow = "1"
flate2 = "1"
reqwest = { version = "0.13.2", default-features = false, features = [
    "json",
    "rustls",
] }
tar = "0.4"
ratex-layout = "0.0.13"
ratex-parser = "0.0.13"
ratex-svg = "0.0.13"
ratex-types = "0.0.13"
resvg = "0.47.0"
# Temporary: use unreleased DAVE/E2EE support from songbird `next`.
songbird = { git = "https://github.com/serenity-rs/songbird", branch = "next", features = [
    "serenity",
    "builtin-queue",
    "rustls",
] }
rustls = { version = "0.23.37", features = ["aws_lc_rs"] }
voicevox_core = { git = "https://github.com/VOICEVOX/voicevox_core", package = "voicevox_core", features = [
    "load-onnxruntime",
    "buildtime-download-onnxruntime",
] }
symphonia = { version = "0.5.2", default-features = false, features = [
    "wav",
    "pcm",
] }
regex = "1.12.3"
once_cell = "1.21.4"
kanalizer = { git = "https://github.com/VOICEVOX/kanalizer.git", package = "kanalizer" }
base64 = "0.22.1"

[profile.release]
opt-level = 3
lto = "fat"
# codegen-units = 1
